[gd_scene load_steps=7 format=3]

[ext_resource type="CylinderMesh" uid="uid://32hblpf43ywt" path="res://assets/weapons/common/sniper_shot_mesh.tres" id="1"]
[ext_resource type="ArrayMesh" uid="uid://c3c16yg76gxs4" path="res://assets/weapons/primary/l96a1/SniperRifle_3.obj" id="2"]
[ext_resource type="AudioStream" uid="uid://bu4qb1otpvwvd" path="res://assets/weapons/primary/l96a1/laserLarge_001.ogg" id="3"]
[ext_resource type="PackedScene" uid="uid://dxp2fdbv4hg0v" path="res://src/weapons/common/raycasts_single_100m.tscn" id="4"]
[ext_resource type="Script" path="res://src/weapons/common/ranged_weapon_controller.gd" id="5"]

[sub_resource type="ParticleProcessMaterial" id=1]
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0

[node name="L96A1" type="Node3D"]
script = ExtResource( 5 )
slot = 0
damage = 120
fire_rate_rpm = 40
semi_auto = true
max_ammo = 30
max_ammo_mag = 5
reload_time_sec = 3.5
swap_time_sec = 3.0
recoil_impulse = 0.5
recoil_drop = 1.0
max_recoil_degrees = 45

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D( -3.25841e-08, 0, 0.2, 0, 0.2, 0, -0.2, 0, -3.25841e-08, 0, 0, -0.39 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null

[node name="SFX" type="Node3D" parent="."]

[node name="Shot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )

[node name="Shot3D" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource( 3 )
unit_size = 3.0

[node name="Particles" type="Node3D" parent="."]

[node name="Shot" type="Particles" parent="Particles"]
transform = Transform3D( 2.65431e-14, 1.62921e-07, 1, 1, -1.62921e-07, 0, 1.62921e-07, 1, -1.62921e-07, 0, 0, -1.50908 )
emitting = false
amount = 1
lifetime = 0.05
one_shot = true
process_material = SubResource( 1 )
draw_pass_1 = ExtResource( 1 )

[node name="RayCasts" parent="." instance=ExtResource( 4 )]

[node name="Timers" type="Node" parent="."]

[node name="FireRateTimer" type="Timer" parent="Timers"]

[node name="ReloadTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="SwapTimer" type="Timer" parent="Timers"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="Timers/FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
[connection signal="timeout" from="Timers/ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="Timers/SwapTimer" to="." method="_on_SwapTimer_timeout"]
